# Ksu-manager

.github/workflows/: build-manager.yml  build.yml  ksud.yml  ksuinit.yml  main.yml  unzip.yml
KernelSU-0.9.5/.github/workflows/: build-manager.yml  ksud.yml
KernelSU-0.9.5/manager/app/: build.gradle.kts
manager/: build.gradle.kts
userspace/ksud/: Cargo.toml
userspace/ksud/src/: su.rs
userspace/ksuinit/: Cargo.toml
