[package]
name = "ksuinit"
version = "2.0.0"
edition = "2021"

[dependencies]
# for elf parsing
goblin = "0.10"
scroll = "0.13"

anyhow = "1.0"
rustix = { git = "https://github.com/Kernel-SU/rustix.git", rev = "4a53fbc", features = ["mount", "fs", "runtime", "system", "process"] }

syscalls = { version = "0.8", default-features = false, features = [
    "arm",
    "aarch64",
    "x86_64",
] }

# for kmsg logging
log = "0.4"
kernlog = { git = "https://github.com/kstep/kernlog.rs" }
